<resources>

    <string name="mobile_input">请输入手机号</string>
    <string name="code_input">请输入验证码</string>
    <string name="main_get_phone_code">获取验证码</string>
    <string name="mine_share_money">邀请赚钱</string>
    <string name="mine_record_voice">为了更好的展示自己，\n请录制5秒以上的语音介绍</string>
    <string name="mine_accost_record">录一些诱惑的声音，会让异性更喜欢你哦！</string>
    <string name="friend">好友</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="edit_userInfo">编辑资料</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="login_out">退出登录</string>
    <string name="vip_can_set">（VIP用户可设置）</string>
    <string name="login">登录</string>
    <string name="login_by_one_ley">去使用一键登录</string>

    <string name="coin_balance">金币余额</string>
    <string name="coin_recharge">金币充值</string>
    <string name="income_and_expenditude_records">收支记录</string>

    <string name="recharge_agreement">充值即代表同意伊糖用户充值协议</string>
    <string name="pay_now">立即充值</string>
    <string name="integral_balance">积分余额</string>
    <string name="exchange_record">兑换记录</string>
    <string name="my_benifit">我的收益</string>
    <string name="income_detail">收益</string>
    <string name="income_exchage">兑换</string>
    <string name="benifit_record">收益记录</string>
    <string name="integral_exchange">积分兑换</string>
    <string name="exchange_coin">兑换金币</string>
    <string name="exchange_coin_reduce">""</string>
    <string name="vip_center">会员中心</string>
    <string name="vip_un_open">VIP会员未开通</string>
    <string name="vip_privilege">%d大特权，提升个性化体验</string>
    <string name="vip_activated">已开通</string>
    <string name="nonactivated">未开通</string>
    <string name="vip_privilege_8">会员特权%d项</string>
    <string name="open_now">立即开通</string>
    <string name="open_now_format">¥%s 立即开通</string>
    <string name="renewal_now">立即续费</string>
    <string name="renewal_now_format">¥%s 立即续费</string>
    <string name="edit_account">修改账号</string>
    <string name="_86">+86</string>
    <string name="cert_requirements">认证要求</string>
    <string name="cert_complete_will_grant">认证完成后，你将获得以下权限</string>
    <string name="cert_now">马上认证</string>
    <string name="living_person_cart">真人认证</string>
    <string name="real_name_cert">实名认证</string>
    <string name="living_person_auth_tip">让更多的Ta关注你</string>
    <string name="to_cert">去认证</string>
    <string name="real_name_cert_tip">积分兑换等功能需要</string>
    <string name="certificated">已认证</string>
    <string name="visitor_vip_tip">除了他们，还有不少人也看过你哦\n开通会员看看他们都是谁吧</string>
    <string name="vip_visible">（已设置仅自己可见）</string>
    <string name="personal_info">个人信息</string>
    <string name="basic_info">基本信息</string>
    <string name="my_all_gift">礼物成就</string>
    <string name="level_mine">我的等级</string>
    <string name="level_his">他的等级</string>
    <string name="level_her">她的等级</string>
    <string name="my_label">我的标签</string>
    <string name="label_his">他的标签</string>
    <string name="label_her">她的标签</string>
    <string name="receive_gift_my">我收到的礼物</string>
    <string name="receive_gift_his">他收到的礼物</string>
    <string name="receive_gift_her">她收到的礼物</string>
    <string name="receive_gift_empty">暂未收到礼物</string>
    <string name="about_me">关于我</string>
    <string name="about_her">关于她</string>
    <string name="about_he">关于他</string>
    <string name="moment">动态</string>
    <string name="gift_wall">礼物墙</string>
    <string name="my_gift_wall">查看我的礼物墙</string>
    <string name="gift_count_format">已点亮 %d/%d</string>
    <string name="tip_read_phone_state">为了完成必要的账号安全检查，保障您的账号安全，请授权我们使用您的设备权限</string>
    <string name="youtu_mode_content">青少年模式中，%s将不会为您提供服务，需输入密码关闭青少年模式，才能继续使用%s服务；</string>
    <string name="youtu_mode_content1">%s是交友脱单平台，禁止未满18周岁的未成年人注册使用，若您是未成年人，请退出应用，感谢您的配合！</string>
    <string name="t_open">开启</string>
    <string name="real_auth_tip">完成真人认证，交友成功率提升10倍</string>
    <string name="vip_dress_use">使用中</string>
    <string name="vip_dress_start_use">立即使用</string>

    <string name="choose_career">选择职业</string>
    <string name="account_cancellation">取消</string>
    <string name="think_about">确定</string>
    <string name="accost_title">新建内容</string>
    <string name="accost_update">编辑内容</string>
    <string name="youth_mode_title" />
    <string name="youth_mode_close" />
    <string name="youth_mode_open" />
    <string name="youth_mode_sure_pass">确认密码</string>

</resources>