<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <include
        layout="@layout/tool_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_default"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_105"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@mipmap/mine_bg_phone_login"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@id/tv_tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/base_tool_bar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:textColor="@color/color_normal"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@id/space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_default"
        tools:text="附近有2688位“已真人认证”用户在线" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/bg_white_radius20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tip">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bg_login_phone"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_login_phone_pre"
                android:gravity="center"
                android:padding="@dimen/dp_16"
                android:text="@string/_86"
                android:textColor="@color/color_mid_font"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_49"
                android:background="@color/transparent"
                android:gravity="center"
                android:hint="@string/mobile_input"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="11"
                android:paddingEnd="@dimen/dp_4"
                android:singleLine="true"
                android:textColor="@color/color_normal"
                android:textColorHint="#999999"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,TextFields" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_16"
                android:background="@color/cd8d8d8"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/et_phone"
                app:layout_constraintStart_toEndOf="@id/tv_phone"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_18"
                android:src="@mipmap/ic_del_phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            app:layout_constraintTop_toBottomOf="@id/cl_mobile">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_49"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/code_input"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="4"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_4"
                android:singleLine="true"
                android:textColor="@color/color_normal"
                android:textColorHint="@color/color_light_font"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_get_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,TextFields" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/shape_bg_login_phone"
                android:gravity="center"
                android:text="@string/main_get_phone_code"
                android:textColor="#999999"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_16"
                android:background="@color/cd8d8d8"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_get_code"
                app:layout_constraintStart_toEndOf="@id/et_code"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_one_key_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="@string/login_by_one_ley"
            android:textColor="#FF2F2F"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cl_mobile"
            app:layout_constraintStart_toStartOf="@id/cl_mobile"
            app:layout_constraintTop_toBottomOf="@id/cl_code"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_login_btn"
            android:enabled="false"
            android:gravity="center"
            android:padding="@dimen/dp_13"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/cl_mobile"
            app:layout_constraintStart_toStartOf="@id/cl_mobile"
            app:layout_constraintTop_toBottomOf="@id/tv_one_key_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>