<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/personal_info"
            android:textColor="@color/color_normal"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_16"
            android:overScrollMode="never"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_info" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_16"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_10"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_user_info"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_level_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_mine"
                android:textColor="@color/color_normal"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_level_vip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vip_visible"
                android:textColor="@color/c_fe4f6b"
                android:textSize="@dimen/sp_12"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_level_title"
                app:layout_constraintStart_toEndOf="@id/tv_level_title"
                app:layout_constraintTop_toTopOf="@id/tv_level_title" />

            <include
                layout="@layout/include_user_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_level_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/my_all_gift"
            android:textColor="@color/color_normal"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_level"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_gift_vip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vip_visible"
            android:textColor="@color/c_fe4f6b"
            android:textSize="@dimen/sp_12"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tv_gift"
            app:layout_constraintStart_toEndOf="@id/tv_gift"
            app:layout_constraintTop_toTopOf="@id/tv_gift" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_gift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:background="@drawable/bg_vip_rich"
            android:overScrollMode="never"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gift"
            app:spanCount="4"
            tools:itemCount="8"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/mine_item_gift"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>